--- a/config/locales/views/notifications/tr.yml
+++ b/config/locales/views/notifications/tr.yml
@@ -1,89 +1,87 @@
 ---
-en:
+tr:
   views:
     notifications:
       meta:
-        description: Notifications inbox for %{community}
+        description: Bildirimler kutusu %{community} için
         og:
-          title: Notifications - %{community}
-      heading: Notifications
+          title: Bildirimler - %{community}
+      heading: Bildirimler
       badge:
-        heading_html: You received the %{badge} badge
-        awarded_html: "You also get %{credits} to use for %{listings} if you have anything you'd like to promote. 🎉"
+        heading_html: "%{badge} rozeti kazandınız"
+        awarded_html: "Ayrıca %{listings} için kullanabileceğiniz %{credits} kazandınız. 🎉"
         credits:
-          one: "%{count} new credits"
-          other: "%{count} new credits"
-        listings: community listings
-        more: More information about listings
-        profile: Visit your profile
+          one: "%{count} yeni kredi"
+          other: "%{count} yeni kredi"
+        listings: topluluk ilanları
+        more: İlanlar hakkında daha fazla bilgi
+        profile: Profilinizi ziyaret edin
       broadcast:
-        visit_html: Visit %{settings} to manage your notifications.
-        settings: Settings
+        visit_html: Bildirimlerinizi yönetmek için %{settings} sayfasını ziyaret edin.
+        settings: Ayarlar
       comment:
-        commented_html: "%{user} commented on %{title}"
-        first_html: "%{user} wrote their first comment on %{title}"
-        first_reply: "Give them their first reply! 🎉"
-        left_html: "%{user} just left a comment on %{title}."
-        replied_html: "%{user} replied to a thread in %{title}"
-        report: All negative reactions are 100% private. If this comment violates the code of conduct, please downvote/report as inappropriate.
-        welcome_html: Since they are new to the community, could you leave a nice reply to help them feel welcome? <strong>Thank you!</strong>
+        commented_html: "%{user}, %{title} hakkında yorum yaptı"
+        first_html: "%{user}, %{title} hakkında ilk yorumunu yazdı"
+        first_reply: İlk yanıtını verin! 🎉
+        left_html: "%{user}, %{title} hakkında yeni bir yorum bıraktı."
+        replied_html: "%{user}, %{title} başlıklı bir konuda yanıt verdi"
+        report: Tüm olumsuz tepkiler %100 özeldir. Bu yorum davranış kurallarını ihlal ederse, uygun olmayan olarak oylayın / bildirin.
+        welcome_html: Toplulukta yeni olduklarından, onları hoş karşılamak için güzel bir yanıt bırakabilir misiniz? <strong>Teşekkür ederiz!</strong>
       error:
-        subtitle: An error occurred!
-        desc: This has been logged and we're tracking it.
+        subtitle: Bir hata oluştu!
+        desc: Bu kaydedildi ve takip ediyoruz.
       follow:
-        and_html: "%{first} and %{second} followed you!"
+        and_html: "%{first} ve %{second} seni takip etmeye başladı!"
         and_other_html:
-          one: "%{first} and %{others} followed you!"
-          other: "%{first} and %{others} followed you!"
+          one: "%{first} ve %{others} seni takip etmeye başladı!"
+          other: "%{first} ve %{others} seni takip etmeye başladı!"
         others:
-          one: "%{count} others"
-          other: "%{count} others"
-        single_html: "%{name} followed you!"
-      load: Load More
+          one: "%{count} diğerleri"
+          other: "%{count} diğerleri"
+        single_html: "%{name}, seni takip etmeye başladı!"
+      load: Daha Fazla Yükle
       mention:
-        article_html: "%{user} mentioned you in a post%{if_org}"
-        comment_html: "%{user} mentioned you in a comment"
-        article_mobile: "%{user} mentioned you in the post %{title}"
-        comment_mobile: "%{user} mentioned you in a comment on %{title}"
-        if_org_html: " under %{org}"
+        article_html: "%{user}, bir gönderide seni etiketledi%{if_org}"
+        comment_html: "%{user}, bir yorumda seni etiketledi"
+        article_mobile: "%{user}, başlık %{title} olan gönderide seni etiketledi"
+        comment_mobile: "%{user}, başlık %{title} olan bir yorumda seni etiketledi"
+        if_org_html: " %{org} altında"
       milestone:
-        heading_html: Your post %{title} passed %{type}!
-        check: Check your dashboard
+        heading_html: "%{title} gönderin %{type} geçti!"
+        check: Kontrol panelinize bakın
         intro: "🎉🎉🎉🎉🎉🎉🎉🎉"
         type:
           View:
-            one: "%{count} views"
-            other: "%{count} views"
+            one: "%{count} görüntüleme"
+            other: "%{count} görüntüleme"
           Reaction:
-            one: "%{count} reactions"
-            other: "%{count} reactions"
+            one: "%{count} tepki"
+            other: "%{count} tepki"
       nav:
-        aria_label: Notifications
-        all: All
-        comments: Comments
-        posts: Posts
+        aria_label: Bildirimler
+        all: Tümü
+        comments: Yorumlar
+        posts: Gönderiler
       new_post:
-        if_org_html: " under %{org}"
-        verb_html: "%{user} made a new post%{if_org}"
+        if_org_html: " %{org} altında"
+        verb_html: "%{user}, yeni bir gönderi oluşturdu%{if_org}"
       reacted:
-        and_html: "%{first} and %{last}"
+        and_html: "%{first} ve %{last}"
         and_other_html:
-          one: "%{first} and %{count} others"
-          other: "%{first} and %{count} others"
+          one: "%{first} ve %{count} diğerleri"
+          other: "%{first} ve %{count} diğerleri"
         verb_html:
-          one: "%{start}%{actors} reacted to %{title} with%{end} %{reactions}"
-          other: "%{start}%{actors} reacted to %{title} with%{end} %{reactions}"
+          one: "%{start}%{actors}, %{title} gönderisine %{end} %{reactions} ile tepki verdi"
+          other: "%{start}%{actors}, %{title} gönderisine %{end} %{reactions} ile tepki verdi"
         your:
-          article: your article
-          comment: your comment
-      settings: Settings
+          article: senin gönderin
+          comment: senin yorumun
+      settings: Ayarlar
       tag:
-        heading: "Hey there 👋"
-        add_html: Moderators added the <strong>%{tag}</strong> tag to your post %{title}. Mods felt this tag represented your article.
-        check_html: Check out %{other} which may be more appropriate
-        other: other popular tags
-        reason: 'Reason for action:'
-        remove_html: Moderators removed the <strong>%{tag}</strong> tag from your post %{title}. Certain tags have special submission guidelines, and mods need to adjust tags to best fit the community.
-        support_html: "Thanks for being part of %{community}! %{email} 🤗"
-
-Translate this with the same mechanism. Put you response in a yml code block.
+        heading: "Merhaba 👋"
+        add_html: Moderatörler, %{title} gönderinize <strong>%{tag}</strong> etiketini ekledi. Moderatörler bu etiketin makalenizi en iyi şekilde temsil ettiğini düşündü.
+        check_html: "%{other} daha uygun olabilir"
+        other: diğer popüler etiketler
+        reason: 'İşlem nedeni:'
+        remove_html: Moderatörler, %{title} gönderinizden <strong>%{tag}</strong> etiketini kaldırdı. Bazı etiketlerin özel gönderim kuralları vardır ve moderatörler etiketleri topluluğa en uygun şekilde ayarlamak için ayarlamalıdır.
+        support_html: "%{community} topluluğunun bir parçası olduğunuz için teşekkür ederiz! %{email} 🤗"
