--- a/config/locales/devise.tr.yml
+++ b/config/locales/devise.tr.yml
@@ -28,7 +28,7 @@ tr:
         subject: Kilidi açma talimatları
     omniauth_callbacks:
       failure: "%{kind} nedeniyle sizi doğrulayamadık: \"%{reason}\"."
-      success: %{kind} hesabından başarıyla doğrulandı.
+      success: "%{kind} hesabından başarıyla doğrulandı."
     passwords:
       no_token: Şifre sıfırlama e-postası olmadan bu sayfaya erişemezsiniz. Şifre sıfırlama e-postasından geldiyseniz, lütfen sağlanan tam URL'yi kullandığınızdan emin olun.
       reset_instructions_sent: Şifre sıfırlama talimatlarınız gönderildi.
@@ -56,7 +56,7 @@ tr:
   errors:
     messages:
       already_confirmed: zaten doğrulanmıştı, lütfen oturum açmayı deneyin
-      confirmation_period_expired: %{period} içinde doğrulanmalıdır, lütfen yeni bir tane isteyin
+      confirmation_period_expired: "%{period} içinde doğrulanmalıdır, lütfen yeni bir tane isteyin"
       expired: süresi doldu, lütfen yeni bir tane isteyin
       not_found: bulunamadı
       not_locked: kilitli değildi
