--- a/config/locales/devise_invitable.tr.yml
+++ b/config/locales/devise_invitable.tr.yml
@@ -13,7 +13,7 @@ tr:
         header: Davetiye gönder
         submit_button: Bir davetiye gönder
       no_invitations_remaining: Kalmış davetiye yok
-      send_instructions: %{email} adresine bir davetiye e-postası gönderildi.
+      send_instructions: "%{email} adresine bir davetiye e-postası gönderildi."
       updated: Parolanız başarıyla ayarlandı. Şimdi oturum açtınız.
       updated_not_active: Parolanız başarıyla ayarlandı.
     mailer:
@@ -23,7 +23,7 @@ tr:
         accept_until: Bu davetiye, %{due_date} tarihinden sonra sona erecektir.
         hello: Merhaba
         ignore: Eğer daveti kabul etmek istemiyorsanız, lütfen bu e-postayı yoksayın. Yukarıdaki bağlantıya erişip parolanızı ayarlayana kadar hesabınız oluşturulmayacaktır.
-        someone_invited_you: %{url} adresindeki %{community_name} topluluğuna katılmaya davet edildiniz.
+        someone_invited_you: "%{url} adresindeki %{community_name} topluluğuna katılmaya davet edildiniz."
         subject: Davetiye talimatları
   time:
     formats:
