--- a/config/locales/mailers/tr.yml
+++ b/config/locales/mailers/tr.yml
@@ -21,7 +21,7 @@ tr:
       new_mention: "%{name}, %{type} içinde sizi bahsetti"
       org_deleted: "%{community} - Organizasyon Silme Onayı"
       new_reply: "%{name}, %{type} içinde size yanıt verdi"
-      feedback: %{community} üzerindeki raporunuz için teşekkür ederiz
+      feedback: '%{community} üzerindeki raporunuz için teşekkür ederiz'
       export: İçerik dışa aktarma işleminiz tamamlandı
       unread_notifications:
         one: "🔥 %{community} 'da %{count} okunmamış bildiriminiz var"
@@ -30,4 +30,4 @@ tr:
       video_upload: Video yüklemeniz tamamlandı
     verification_mailer:
       from: "%{community} E-Posta Doğrulama <%{email}>"
-      verify_ownership: %{community} Hesap Sahipliğinizi Doğrulayın
+      verify_ownership: '%{community} Hesap Sahipliğinizi Doğrulayın'
