--- a/config/locales/tr.yml
+++ b/config/locales/tr.yml
@@ -36,13 +36,13 @@ tr:
       half_a_minute: yarım dakika önce
       less_than_x_seconds:
         one: 1 saniyeden daha az önce
-        other: %{count} saniyeden daha az önce
+        other: "%{count} saniyeden daha az önce"
       less_than_x_minutes:
         one: bir dakikadan daha az önce
-        other: %{count} dakikadan daha az önce
+        other: "%{count} dakikadan daha az önce"
       over_x_years:
         one: 1 yıldan fazla önce
-        other: %{count} yıldan fazla önce
+        other: "%{count} yıldan fazla önce"
       x_seconds:
         one: 1 saniye önce
         other: "%{count} saniye önce"
@@ -74,28 +74,28 @@ tr:
       half_a_minute: Yarım dakika önce sona erdi
       less_than_x_seconds:
         one: 1 saniyeden daha az önce sona erdi
-        other: %{count} saniyeden daha az önce sona erdi
+        other: "%{count} saniyeden daha az önce sona erdi"
       less_than_x_minutes:
         one: Bir dakikadan daha az önce sona erdi
-        other: %{count} dakikadan daha az önce sona erdi
+        other: "%{count} dakikadan daha az önce sona erdi"
       over_x_years:
         one: 1 yıldan fazla önce sona erdi
-        other: %{count} yıldan fazla önce sona erdi
+        other: "%{count} yıldan fazla önce sona erdi"
       x_seconds:
         one: 1 saniye önce sona erdi
-        other: %{count} saniye önce sona erdi
+        other: "%{count} saniye önce sona erdi"
       x_minutes:
         one: 1 dakika önce sona erdi
-        other: %{count} dakika önce sona erdi
+        other: "%{count} dakika önce sona erdi"
       x_days:
         one: 1 gün önce sona erdi
-        other: %{count} gün önce sona erdi
+        other: "%{count} gün önce sona erdi"
       x_months:
         one: 1 ay önce sona erdi
-        other: %{count} ay önce sona erdi
+        other: "%{count} ay önce sona erdi"
       x_years:
         one: 1 yıl önce sona erdi
-        other: %{count} yıl önce sona erdi
+        other: "%{count} yıl önce sona erdi"
     expires_in:
       about_x_hours:
         one: Yaklaşık 1 saat içinde süresi doluyor
@@ -112,28 +112,28 @@ tr:
       half_a_minute: Yarım dakika içinde süresi doluyor
       less_than_x_seconds:
         one: 1 saniyeden daha kısa süre içinde süresi doluyor
-        other: %{count} saniyeden daha kısa süre içinde süresi doluyor
+        other: "%{count} saniyeden daha kısa süre içinde süresi doluyor"
       less_than_x_minutes:
         one: Bir dakikadan daha kısa süre içinde süresi doluyor
-        other: %{count} dakikadan daha kısa süre içinde süresi doluyor
+        other: "%{count} dakikadan daha kısa süre içinde süresi doluyor"
       over_x_years:
         one: 1 yıldan fazla süre içinde süresi doluyor
-        other: %{count} yıldan fazla süre içinde süresi doluyor
+        other: "%{count} yıldan fazla süre içinde süresi doluyor"
       x_seconds:
         one: 1 saniye içinde süresi doluyor
-        other: %{count} saniye içinde süresi doluyor
+        other: "%{count} saniye içinde süresi doluyor"
       x_minutes:
         one: 1 dakika içinde süresi doluyor
-        other: %{count} dakika içinde süresi doluyor
+        other: "%{count} dakika içinde süresi doluyor"
       x_days:
         one: 1 gün içinde süresi doluyor
-        other: %{count} gün içinde süresi doluyor
+        other: "%{count} gün içinde süresi doluyor"
       x_months:
         one: 1 ay içinde süresi doluyor
-        other: %{count} ay içinde süresi doluyor
+        other: "%{count} ay içinde süresi doluyor"
       x_years:
         one: 1 yıl içinde süresi doluyor
-        other: %{count} yıl içinde süresi doluyor
+        other: "%{count} yıl içinde süresi doluyor"
   display_ad:
     promoted: Promosyonlu
     menu:
@@ -145,27 +145,27 @@ tr:
   errors:
     messages:
       accepted: kabul edilmeli
-      bad_protocol: %{protocols} ile başlamalı
+      bad_protocol: "%{protocols} ile başlamalı"
       bad_uri: geçersiz bir url
       blank: boş bırakılamaz
-      confirmation: %{attribute} ile eşleşmiyor
+      confirmation: "%{attribute} ile eşleşmiyor"
       contains_prohibited_characters: alfasayısal olmayan veya yasaklanmış unicode karakterler içeriyor
       empty: boş olamaz
-      equal_to: %{count} e eşit olmalı
+      equal_to: "%{count} e eşit olmalı"
       even: çift olmalı
       exclusion: ayrılmış
       general: 'Hata: %{errors}'
-      greater_than: %{count} 'den büyük olmalı
-      greater_than_or_equal_to: %{count} 'den büyük veya eşit olmalı
+      greater_than: "%{count} 'den büyük olmalı"
+      greater_than_or_equal_to: "%{count} 'den büyük veya eşit olmalı"
       inclusion: listeye dahil değil
       invalid: geçersiz
-      less_than: %{count} 'den küçük olmalı
-      less_than_or_equal_to: %{count} 'den küçük veya eşit olmalı
+      less_than: "%{count} 'den küçük olmalı"
+      less_than_or_equal_to: "%{count} 'den küçük veya eşit olmalı"
       model_invalid: 'Doğrulama başarısız oldu: %{errors}'
       not_a_number: sayı değil
       not_an_integer: tam sayı olmalı
       odd: tek olmalı
-      other_than: %{count} 'den farklı olmalı
+      other_than: "%{count} 'den farklı olmalı"
       present: boş olmalı
       required: mevcut olmalı
       taken: zaten alınmış
