--- a/config/locales/views/articles/tr.yml
+++ b/config/locales/views/articles/tr.yml
@@ -1,115 +1,113 @@
 ---
-en:
+tr:
   views:
     articles:
       meta:
-        description: An article from the community
+        description: Topluluktan bir makale
       actions:
-        aria_label: Article actions
+        aria_label: Makale eylemleri
       comments:
-        aria_label: Add a comment to post - %{title}
+        aria_label: Yorum ekle - %{title}
         sort:
-          heading: "Sort discussion: "
+          heading: "Tartışmayı sırala: "
           title:
-            top: Top
-            latest: Latest
-            oldest: Oldest
+            top: En üstteki
+            latest: En yeni
+            oldest: En eski
           desc:
-            top: Most upvoted and relevant comments will be first
-            latest: Most recent comments will be first
-            oldest: The oldest comments will be first
+            top: En çok oylanan ve ilgili yorumlar ilk sırada olacak
+            latest: En son yorumlar ilk sırada olacak
+            oldest: En eski yorumlar ilk sırada olacak
         sort_button:
-          aria_label: Sort comments
+          aria_label: Yorumları sırala
         subtitle:
-          top_html: Top comments %{num}
-          latest_html: Latest comments %{num}
-          oldest_html: Oldest comments %{num}
+          top_html: En üstteki yorumlar %{num}
+          latest_html: En yeni yorumlar %{num}
+          oldest_html: En eski yorumlar %{num}
         num: "(%{num})"
-        subscribe: Subscribe
+        subscribe: Abone ol
       conduct:
-        aria_label: Conduct controls
-        code: Code of Conduct
-        report: Report abuse
+        aria_label: Davranış denetimleri
+        code: Davranış Kuralları
+        report: İhlal bildirimi
       delete:
-        heading: Are you sure you want to delete this article?
+        heading: Bu makaleyi silmek istediğinize emin misiniz?
         desc:
-          text_html: You cannot undo this action, perhaps you just want to %{action} instead?
-          edit: edit
-          unpublish: unpublish
+          text_html: Bu işlemi geri alamazsınız, belki de sadece %{action} istiyorsunuz?
+          edit: düzenle
+          unpublish: yayından kaldır
         action:
-          button: Delete
-          cancel: Dismiss
-          edit: Edit
-          unpublish: Unpublish
+          button: Sil
+          cancel: Kapat
+          edit: Düzenle
+          unpublish: Yayından kaldır
       jump_to_comments:
-        aria_label: Jump to Comments
-        label: Jump to Comments
+        aria_label: Yorumlara Git
+        label: Yorumlara Git
       lock:
         meta:
-          title: Confirm Discussion Lock
-        heading: Are you sure you want to lock the discussion on this post?
-        desc_html: Users will not be able to add new comments. This will <em class="fw-bold">not</em> remove existing comments. You can unlock the discussion at any time to allow users to leave comments again.
-        cancel: Cancel
+          title: Tartışma Kilitleme İşlemi Onayı
+        heading: Bu gönderideki tartışmayı kilitlemek istediğinize emin misiniz?
+        desc_html: Kullanıcılar yeni yorum ekleyemeyecek. Bu, mevcut yorumları kaldırmayacak. Kullanıcıların yeniden yorum bırakmasına izin vermek için tartışmayı herhangi bir zamanda kilitleyebilirsiniz.
+        cancel: İptal
         notes:
-          label: Notes (optional) - this is only visible to you and admins
-          placeholder: More details as to why you locked the discussion.
+          label: Notlar (isteğe bağlı) - sadece siz ve yöneticiler tarafından görülebilir
+          placeholder: Tartışmayı neden kilitlediğinize dair daha fazla ayrıntı.
         reason:
-          label: Reason for locking the discussion (optional) - this will be publicly displayed
-          placeholder: The reason why you're locking this discussion.
-        submit: Lock discussion
+          label: Tartışmayı kilitlenme nedeni (isteğe bağlı) - bu herkese açık olarak görüntülenecektir
+          placeholder: Bu tartışmayı neden kilitlediğinizi belirtin.
+        submit: Tartışmayı kilitla
       preview_discuss_html:
-        zero: New Discussion!
-        one: '#discuss <img src="%{image}" />%{count}'
-        other: '#discuss <img src="%{image}" />%{count}'
+        zero: Yeni Tartışma!
+        one: '#tartış <img src="%{image}" />%{count}'
+        other: '#tartış <img src="%{image}" />%{count}'
       save:
-        title: "Save post %{title} to reading list"
-        aria_label: "Save post %{title} to reading list"
-        initial: Save
-        success: Saved
+        title: "Makaleyi okuma listesine kaydet %{title}"
+        aria_label: "Makaleyi okuma listesine kaydet %{title}"
+        initial: Kaydet
+        success: Kaydedildi
       scheduled:
-        subtitle: Scheduled Post.
-        text: " This URL is public but secret, so share at your own discretion."
-        edit: Click to edit
+        subtitle: Zamanlanmış Gönderi.
+        text: " Bu URL herkese açık ancak gizli, dolayısıyla kendi takdirinize göre paylaşın."
+        edit: Düzenlemek için tıklayın
       series:
         subtitle: "%{slug} (%{size})"
         size:
-          one: "%{count} Part Series"
-          other: "%{count} Part Series"
-        published: Published %{date}
+          one: "%{count} Bölümlük Dizi"
+          other: "%{count} Bölümlük Dizi"
+        published: "%{date} tarihinde yayınlandı"
         inbetween:
           num: "..."
           text:
-            one: one more part...
-            other: "%{count} more parts..."
-          title: View more
+            one: bir bölüm daha var...
+            other: "%{count} bölüm daha var..."
+          title: Daha fazlasını görüntüle
       unlock:
         meta:
-          title: Confirm Discussion Unlock
-        heading: Are you sure you want to unlock the discussion on this post?
-        desc: Users will be able to add new comments. You can lock the discussion at any time to prevent users from leaving comments again.
-        cancel: Cancel
-        notes: 'Notes from when this discussion was locked (only visible to you and admins):'
-        reason: 'Reason this discussion was locked (publicly visible):'
-        submit: Unlock discussion
+          title: Tartışma Kilidini Açma İşlemi Onayı
+        heading: Bu gönderideki tartışmanın kilidini açmak istediğinize emin misiniz?
+        desc: Kullanıcılar yeni yorum ekleyebilecekler. Kullanıcıların yorum bırakmasını engellemek için tartışmayı herhangi bir zamanda kilitleyebilirsiniz.
+        cancel: İptal
+        notes: 'Tartışma kilitlendiği zaman yapılan notlar (yalnızca siz ve yöneticiler tarafından görülebilir):'
+        reason: 'Tartışmanın neden kilitlendiği (herkese açık olarak görünecektir):'
+        submit: Tartışma kilidini aç
       unpublished:
-        subtitle: Unpublished Post.
-        text: " This URL is public but secret, so share at your own discretion."
-        edit: Click to edit
-      co_authors_html: with %{names}
+        subtitle: Yayından Kaldırılmış Gönderi.
+        text: " Bu URL herkese açık ancak gizli, dolayısıyla kendi takdirinize göre paylaşın."
+        edit: Düzenlemek için tıklayın
+      co_authors_html: "%{names} ile birlikte"
       crossposted:
-        text_html: Originally published at %{url} %{on}
-        on_html: on %{date}
-      edited: Updated on %{date}
-      edited_html: Updated on %{date}
-      for_org_html: "%{start} for %{end}%{org}"
-      missing: Article No Longer Available
-      published_html: Posted on %{date}
-      scheduled_html: Scheduled for %{date}
-      sign_in_for_full_latest_html: Some latest posts are only visible for members. <a href="%{link}">Sign in</a> to see all latest.
-      read_next: Read next
+        text_html: "%{url} adresinde orijinal olarak yayınlandı %{on}"
+        on_html: "%{date} tarihinde"
+      edited: "%{date} tarihinde güncellendi"
+      edited_html: "%{date} tarihinde güncellendi"
+      for_org_html: "%{start} %{end}%{org} için"
+      missing: Makale Artık Mevcut Değil
+      published_html: "%{date} tarihinde yayınlandı"
+      scheduled_html: "%{date} tarihinde zamanlanmış"
+      sign_in_for_full_latest_html: Bazı en son gönderiler sadece üyeler tarafından görülebilir. Tüm en son gönderileri görmek için <a href="%{link}">giriş yapın</a>.
+      read_next: Devamını oku
       reading_time:
-        one: "1 min read"
-        other: "%{count} min read"
-      right_nav: Author details
-
-Translate this with the same mechanism. Put you response in a yml code block.
+        one: "1 dakika okuma"
+        other: "%{count} dakika okuma"
+      right_nav: Yazar detayları
