--- a/config/locales/views/comments/tr.yml
+++ b/config/locales/views/comments/tr.yml
@@ -1,154 +1,152 @@
 ---
-en:
+tr:
   views:
     comments:
       meta:
-        title_root: Discussion of %{title}
-        description: An article from the community
+        title_root: "%{title} Tartışması"
+        description: Topluluktan bir makale
         og:
-          title: Discussion of %{title}
+          title: "%{title} Tartışması"
           title_rel: "%{root} — %{site}"
-          title_root: "[Discussion] %{title} — %{site}"
-          description: "%{site} Comment"
+          title_root: "[Tartışma] %{title} — %{site}"
+          description: "%{site} Yorumu"
       parent:
-        subtitle_html: "%{start}Discussion on: %{end}%{title}"
+        subtitle_html: "%{start}Tartışma: %{end}%{title}"
         metadata_html: "%{name}%{on}"
-        date: " on %{date}"
-        full: Full discussion
-        read: Read full post
-        view: View post
+        date: " %{date} tarihinde"
+        full: Tüm tartışma
+        read: Tüm yazıyı oku
+        view: Yazıyı görüntüle
         view_full:
-          one: View full discussion (%{count} comment)
-          other: View full discussion (%{count} comments)
-        reply_html: "%{start}Replies for:%{end} %{title}"
+          one: Tüm tartışmayı görüntüle (%{count} yorum)
+          other: Tüm tartışmayı görüntüle (%{count} yorum)
+        reply_html: "%{start}Yanıtlar için:%{end} %{title}"
       delete:
-        heading: Are you sure you want to delete this comment?
-        desc_html: You cannot undo this action, perhaps you just want to %{action} instead?
-        action: Edit
-        submit: Delete
-        edit: Edit
-        cancel: Dismiss
-        comment_deleted: Comment deleted
-      collapse: Collapse
-      edit: Editing comment
+        heading: Bu yorumu silmek istediğinizden emin misiniz?
+        desc_html: Bu işlemi geri alamazsınız, belki de sadece %{action} yapmak istersiniz?
+        action: Düzenle
+        submit: Sil
+        edit: Düzenle
+        cancel: İptal
+        comment_deleted: Yorum silindi
+      collapse: Daralt
+      edit: Yorum düzenleniyor
       edited:
-        text_html: "&bull; Edited on %{date}"
-        short_html: "&bull; Edited"
-      expand: Expand
+        text_html: "&bull; %{date} tarihinde düzenlendi"
+        short_html: "&bull; Düzenlendi"
+      expand: Genişlet
       visible_signed_in:
-        text_html: "Some comments may only be visible to logged-in visitors. %{sign_in} to view all comments."
-        sign_in: "Sign in"
+        text_html: "Bazı yorumlar yalnızca giriş yapan ziyaretçiler tarafından görülebilir. Tüm yorumları görüntülemek için %{sign_in}."
+        sign_in: "giriş yapın"
       hidden:
-        text_html: Some comments have been hidden by the post's author - %{info}
-        info: find out more
-        comment_hidden: Comment hidden by post author
+        text_html: Bazı yorumlar gönderinin yazarı tarafından gizlenmiştir - %{info}
+        info: daha fazlasını öğrenin
+        comment_hidden: Gönderi yazarı tarafından gizlenen yorum
       hider:
-        description_html: Are you sure you want to hide this comment? It will become hidden in your post, but will still be visible via the comment's %{permalink}.
-        hide_child: Hide child comments as well
-        note_html: For further actions, you may consider blocking this person and/or %{reporting}
-        permalink: permalink
-        reporting: reporting abuse
-        submit: Confirm
-      locked: The discussion has been locked. New comments can't be added.
+        description_html: Bu yorumu gizlemek istediğinizden emin misiniz? Gönderinizde gizli hale gelecektir, ancak yine de yorumun %{permalink} üzerinden görüntülenebilir.
+        hide_child: Alt yorumları da gizle
+        note_html: Diğer eylemler için, bu kişiyi engellemeyi ve/veya %{reporting} düşünebilirsiniz.
+        permalink: kalıcı bağlantı
+        reporting: istenmeyen davranışları bildirme
+        submit: Onayla
+      locked: Tartışma kilitlendi. Yeni yorumlar eklenemez.
       orphan:
-        deleted: "[Comment from a deleted post]"
+        deleted: "[Silinmiş bir gönderiden yorum]"
       re:
         text_html: "%{re}%{title}"
-        re: 'Re: '
+        re: 'Ynt: '
       settings:
         meta:
-          title: Comment Settings
-        heading: Comment Settings
+          title: Yorum Ayarları
+        heading: Yorum Ayarları
         state:
           show:
-            subtitle: Showing thread notifications
-            desc: You will receive all notifications for this comment and any of your comments in this chain.
+            subtitle: Konu bildirimlerinin gösterilmesi
+          desc: Bu yorumda ve bu zincirdeki yorumlar için tüm bildirimleri alacaksınız.
           mute:
-            subtitle: Muting thread notifications
-            desc: All notifications for this comment and any of your comments in the thread are currently muted.
+            subtitle: Konu bildirimlerinin kapatılması
+            desc: Bu yorumda ve bu zincirdeki tüm bildirimler şu anda kapatıldı.
         subscribe:
-          subtitle: Subscription
-          desc: You are still subscribed to all comments in the broader thread, which will mean you will still receive notifications for replies to this comment.
-          mute: Mute notifications
-          unmute: Unmute notifications
+          subtitle: Abonelik
+          desc: Genişletilmiş tartışmada tüm yorumlara hala abonesiniz, bu da bu yoruma yanıtlar için hala bildirim alacağınız anlamına gelir.
+          mute: Bildirimleri kapat
+          unmute: Bildirimleri aç
       quality:
-        low: Comment marked as low quality/non-constructive by the community.
-        conduct: View Code of Conduct
+        low: Topluluk tarafından düşük kaliteli/yardımcı olmayan bir yorum olarak işaretlendi.
+        conduct: Davranış Kurallarını Görüntüle
         hidden:
-          icon: Info
+          icon: Bilgi
           text:
-            visible_in_permalink: Comment hidden by post author - thread only visible in this permalink
-            accessible_via_permalink: Comment hidden by post author - thread only accessible via permalink
+            visible_in_permalink: Gönderi yazarı tarafından gizlenen yorum - yalnızca bu kalıcı bağlantıda zincir görülebilir
+            accessible_via_permalink: Gönderi yazarı tarafından gizlenen yorum - yalnızca bu kalıcı bağlantı aracılığıyla erişilebilir
       write:
         errors:
-          one: '1 error prohibited this comment from being saved:'
-          other: "%{count} errors prohibited this comment from being saved:"
+          one: 'Bu yorumun kaydedilmesi engellendi: 1 hata:'
+          other: "Bu yorumun kaydedilmesi engellendi: %{count} hata:"
         field:
-          aria_label: Add a comment to the discussion
-          placeholder: Add to the discussion
-          submit: Upload
-          templates: Templates
-          upload: Upload image
-          use: Use a response template
+          aria_label: Tartışmaya yorum ekle
+          placeholder: Tartışmaya katkıda bulunun
+          submit: Yükle
+          templates: Şablonlar
+          upload: Resim yükle
+          use: Yanıt şablonu kullan
           guide:
-            title: Markdown Guide
-            icon: Editor guide
+            title: Markdown Kılavuzu
+            icon: Düzenleyici kılavuzu
         template:
-          article: This post comes with a comment template
+          article: Bu gönderi bir yorum şablonuyla birlikte gelir
           create:
-            subtitle: Create template
-            desc: Templates let you quickly answer FAQs or store snippets for re-use.
-          moderator: Trusted User
-          personal: Personal
-        submit: Submit
-        preview: Preview
-        cancel: Dismiss
+            subtitle: Şablon oluştur
+            desc: Şablonlar, sıkça sorulan soruları hızlı bir şekilde yanıtlamanıza veya kullanılmak üzere kesitleri depolamanıza olanak tanır.
+          moderator: Güvenilir Kullanıcı
+          personal: Kişisel
+        submit: Gönder
+        preview: Önizleme
+        cancel: İptal
       menu:
-        aria_label: Toggle dropdown menu
-        icon: Dropdown menu
+        aria_label: Açılır menüyü aç/kapat
+        icon: Açılır menü
         copy:
-          aria_label: Copy link to %{user}'s comment
-          text: Copy link
+          aria_label: "%{user}'ın yorumunun bağlantısını kopyala"
+          text: Bağlantıyı kopyala
         settings:
-          aria_label: Go to %{user}'s comment settings
+          aria_label: "%{user}'ın yorum ayarlarına git"
         action:
-          aria_label: "%{action} %{user}'s comment"
-          hide: Hide
-          unhide: Unhide
-          hide_text: Hide
-          unhide_text: Unhide
+          aria_label: "%{action} %{user}'ın yorumu"
+          hide: Gizle
+          unhide: Göster
+          hide_text: Gizle
+          unhide_text: Göster
         moderate:
-          aria_label: Moderate %{user}'s comment
+          aria_label: "%{user}'ın yorumunu yönet"
         report:
-          aria_label: Report %{user}'s comment as abusive or violating our code of conduct and/or terms and conditions
+          aria_label: "%{user}'ın yorumunun istenmeyen olduğunuz veya davranış kurallarımızı ve/veya şartlarımızı ihlal ettiğini rapor et."
       footer:
         heart:
-          aria_label: like
-          title: Like
-          icon: 'Like comment: '
+          aria_label: Beğen
+          title: Beğen
+          icon: 'Yorumu beğen: '
           count_html: "%{num}%{likes}"
-          text: Like
+          text: Beğen
         reply:
-          aria_label: Reply to a comment...
-          icon: Comment button
-          done: Replied
-          text: Reply
-          placeholder: Reply...
+          aria_label: Yoruma yanıt ver...
+          icon: Yorum butonu
+          done: Yanıtlandı
+          text: Yanıtla
+          placeholder: Yanıtla...
         thread:
-          icon: Thread
-          text: Thread
+          icon: Konu
+          text: Konu
         view:
-          icon: View button
-          text: View
+          icon: Görüntüleme butonu
+          text: Görüntüle
       count:
-        one: "%{count} comment"
-        other: "%{count} comments"
-      empty: New
-      add: "Add\_Comment"
+        one: "%{count} yorum"
+        other: "%{count} yorum"
+      empty: Yeni
+      add: "Yorum\_Ekle"
       summary:
         count_html:
-          one: "%{count}%{start}\_comment%{end}"
-          other: "%{count}%{start}\_comments%{end}"
-        title: Comments
-
-Translate this with the same mechanism. Put you response in a yml code block.
+          one: "%{count} %{start}yorum%{end}"
+          other: "%{count} %{start}yorum%{end}"
+        title: Yorumlar
